@@ -1,5 +1,8 @@
 2009-01-22  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* tools/{fax2tiff.c,thumbnail.c,tiff2pdf.c,tiff2ps.c,tiffdump.c,
+	tiffsplit.c}: avoid warnings, mostly 32bit/64bit casting issues.
+
 	* port,tools: Introduce libport.h, and include in tools if NEED_LIBPORT
 	defined, primarily to reduce prototype warnings on windows. 
 
